--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="src/css/footer.css" />
     <link rel="stylesheet" href="src/css/mediaQueries.css" />
 
-    <title>wedding - invitation</title>
+    <title>The Wedding Of Andi & Mutiara</title>
   </head>
   <body>
     <header>
